<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login">
    </androidx.appcompat.widget.AppCompatImageView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_top"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="0dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="18dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#001042"
            app:srcCompat="@drawable/custom_icon">
        </androidx.appcompat.widget.AppCompatImageView>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/main_title"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="normal">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="38.5dp"
        android:fontFamily="@font/opensansbold">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/main_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_main_id"
        android:text="아이디 저장"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:layout_marginStart="40dp">
    </androidx.appcompat.widget.AppCompatCheckBox>
   <androidx.appcompat.widget.AppCompatEditText
       android:id = "@+id/activity_main_id"
       android:layout_width="310dp"
       android:layout_height="70dp"
       app:layout_constraintStart_toStartOf="@id/guideline_start"
       app:layout_constraintEnd_toEndOf="@id/guideline_end"
       app:layout_constraintTop_toBottomOf="@id/text2"
       android:layout_marginTop="80dp"
       android:layout_marginEnd="10dp"
       app:layout_constraintVertical_chainStyle="packed"
       android:hint="@string/main_id"
       android:textColorHint="#FF9D9D9D"
       android:textColor="@color/white"
       android:textStyle="bold"
       android:textSize="22dp"
       android:maxLength="23"
       android:textCursorDrawable="@drawable/cursor_drawable"
       android:fontFamily="@font/opensansregular"
       android:background="#40000000"
       />

    <androidx.appcompat.widget.AppCompatEditText
        android:id = "@+id/activity_main_pw"
        android:layout_width="310dp"
        android:layout_height="70dp"
        android:maxLength="15"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/activity_main_id"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:hint="@string/main_pw"
        android:textSize="22dp"
        android:textColorHint="#9D9D9D"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:fontFamily="@font/opensansregular"
        android:background="#40000000"
        android:textCursorDrawable="@drawable/cursor_drawable"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_main_btn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_btn_name"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/activity_main_pw"
        android:layout_marginTop="20dp"
        android:background="#40000000"
        android:textStyle="bold"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>